--- a/DoodleChat Beta 1,1,2.html
+++ b/DoodleChat Beta 1,1,2.html
@@ -11,92 +11,97 @@
       font-family: 'Montserrat', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #transparent; /* Fondo blanco para todo el documento */
+      background-color: transparent; /* Fondo blanco para todo el documento */
     }
 
     /* Estilos del chat */
 
     .chat-container {
-      max-width: 90%;
-      margin: 20px auto;
-      border-radius: 10px;
+      max-width: 90vw;
+      margin: 5vw auto;
+      border-radius: 20px; /* Cambio a vw */
       overflow: hidden;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 1vw 2vw rgba(0, 0, 0, 0.1); /* Cambio a vw */
       background-color: rgba(255, 255, 255, 0.5); /* Color de fondo con efecto mica */
-      backdrop-filter: blur(20px); /* Agregar el efecto de desenfoque al fondo */
+      backdrop-filter: blur(5vw); /* Utiliza 5vw en lugar de 50px para el desenfoque */
     }
 
     .chat-title {
       background-color: rgba(30, 108, 147, 1); /* Color de fondo con efecto mica */
       color: #fff;
-      font-size: 18px;
-      padding: 10px;
+      font-size: 2.5vw;
+      padding: 1.3vw;
       text-align: center;
       font-family: 'Lato', sans-serif;
     }
 
-  .chat-messages {
-    height: 450px;
-    max-height: 450px; /* Establecer una altura máxima */
-    overflow-y: auto; /* Activar el desplazamiento vertical */
-    padding: 10px;
-    position: relative;
-    background-color: rgba(255, 255, 255, 0.5); /* Color de fondo con efecto mica para los mensajes */
-  }
+    .chat-messages {
+      height: 65vh;
+      max-height: 65vh;
+      overflow-y: auto;
+      padding: 2vw;
+      position: relative;
+      background-color: rgba(255, 255, 255, 0.5); /* Color de fondo con efecto mica para los mensajes */
+    }
 
-  .chat-message {
-    display: flex;
-    align-items: flex-end;
-    margin-bottom: 10px;
-    padding-left: 50px; /* Agregar un espaciado a la izquierda para el texto */
-  }
+    .chat-message {
+      display: flex;
+      align-items: flex-start; /* Cambiado de flex-end a flex-start */
+      margin-bottom: 4vw;
+      padding-left: 5vw; /* Cambio a vw */
+    }
 
     .avatar {
-      width: 30px;
-      height: 30px;
-      background-image: url('https://i.postimg.cc/QdQdQxCN/Doodle-Chat-Logo-Doodle-Chat-Isotipo-1-versi-n-3-D-Perfil.webp');
-      background-size: cover;
-      border-radius: 50%;
-      margin-right: 10px;
-    }
+	  width: 2vw;
+	  height: 2vw;
+	  min-width: 30px; /* Tamaño mínimo deseado */
+	  min-height: 30px; /* Tamaño mínimo deseado */
+	  background-image: url('https://i.postimg.cc/QdQdQxCN/Doodle-Chat-Logo-Doodle-Chat-Isotipo-1-versi-n-3-D-Perfil.webp');
+	  background-size: cover;
+	  border-radius: 50%;
+	  margin-right: 1vw;
+	}
 
     .user-message {
       background-color: rgba(30, 108, 147, 0.8); /* Color de fondo con efecto mica */
       color: #fff;
       border-radius: 15px 15px 0 15px;
-      padding: 10px;
+      padding: 2vw;
       align-self: flex-end;
       animation: fadeIn 0.3s;
+      font-size: 2.5vw; /* Puedes ajustar este valor según tus preferencias */
     }
 
     .bot-message {
       background-color: rgba(225, 225, 225, 0.5); /* Color de fondo con efecto mica */
       color: #333;
       border-radius: 15px 15px 15px 0;
-      padding: 10px;
+      padding: 2vw;
       position: relative;
       animation: fadeIn 0.3s;
+      font-size: 2.5vw; /* Puedes ajustar este valor según tus preferencias */
     }
 
     .suggested-buttons {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 10px;
-      padding: 10px;
+      gap: 1vw;
+      padding: 2vw;
       background-color: rgba(225, 225, 225, 0.5); /* Color de fondo con efecto mica */
-      border-radius: 10px 10px 0px 0px;
+      border-radius: 0px 0px 0px 0px;
     }
 
     .suggested-buttons button {
       background-color: rgba(30, 108, 147, 0.8); /* Color de fondo con efecto mica */
       color: #fff;
       border: none;
-      border-radius: 10px;
-      padding: 8px 16px;
+      border-radius: 1.5vw; /* Cambio a vw */
+      padding: 1vw 2vw; /* Cambio a vw */
       cursor: pointer;
       transition: background-color 0.3s;
       font-family: 'Montserrat', sans-serif;
+      font-size: 2vw; /* Puedes ajustar este valor según tus preferencias */
     }
 
     .suggested-buttons button:hover {
@@ -106,17 +111,17 @@
     .user-input {
       display: flex;
       align-items: center;
-      gap: 10px;
-      border-top: 2px solid rgba(30, 108, 147, 0.8); /* Color de fondo con efecto mica */
-      padding: 10px;
+      gap: 1vw;
+      border-top: 0.4vw solid rgba(30, 108, 147, 0.8); /* Cambio a vw */
+      padding: 2vw;
     }
 
     .user-input input {
       flex: 1;
       border: none;
-      border-radius: 20px;
-      padding: 8px 16px;
-      font-size: 14px;
+      border-radius: 3.5vw; /* Cambio a vw */
+      padding: 1vw 2vw; /* Cambio a vw */
+      font-size: 2vw; /* Cambio a vw */
       background-color: rgba(225, 225, 225, 0.5); /* Color de fondo con efecto mica */
       transition: background-color 0.3s;
       font-family: 'Montserrat', sans-serif;
@@ -130,9 +135,9 @@
       background-color: rgba(30, 108, 147, 0.8); /* Color de fondo con efecto mica */
       color: #fff;
       border: none;
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
+      border-radius: 2vw; /* Cambio a vw */
+      width: 4vw;
+      height: 4vw;
       cursor: pointer;
       display: flex;
       align-items: center;
@@ -149,9 +154,9 @@
       background-color: rgba(255, 0, 0, 0.5); /* Color de fondo con efecto mica */
       color: #fff;
       border: none;
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
+      border-radius: 2vw; /* Cambio a vw */
+      width: 4vw;
+      height: 4vw;
       cursor: pointer;
       display: flex;
       align-items: center;
@@ -163,17 +168,11 @@
     @keyframes fadeIn {
       from {
         opacity: 0;
-        transform: translateY(10px);
+        transform: translateY(10vw); /* Cambio a vw */
       }
       to {
         opacity: 1;
         transform: translateY(0);
-      }
-    }
-
-    @keyframes typing {
-      from {
-        width: 0;
       }
     }
 
@@ -486,10 +485,6 @@ function updateSuggestedMessages(userInput) {
     'Adiós',
     '¿Quién es Alan Martínez?',
     '¿Quién eres?',
-    'Te quiero mucho',
-    'Te adoro',
-    'Te amo',
-    'Seamos novios'
   ];
 
   const filteredSuggestions = suggestedMessages.filter((message) => !userInput.includes(message.toLowerCase()));
